Fix alignment

--- a/src/assets/less/pages/globalping/about-us.less
+++ b/src/assets/less/pages/globalping/about-us.less
@@ -94,7 +94,7 @@
 						display: flex;
 						align-items: center;
 						column-gap: 16px;
-						padding: 0 0 0 24px;
+						padding: 0 24px;
 						height: 80px;
 						border-radius: 8px;
 						border: 1.5px solid #e7e7ee;
